# production-pulse-mcp

./: ,gitignore  .env  README.md  pyproject.toml  requirements.txt  test_server.py
.github/workflows/: ci.yml
src/frame_pulse/: alerts.py  glances_client.py  server.py  system_client.py
src/production_pulse/: server.py
streamlit_app/: mission_control.py
