[project]
name = "production-pulse-mcp"
version = "0.1.0"
description = "MCP server for safeguarding creative production workloads (Blender, UE5, Houdini) via system telemetry"
authors = [{name = "Ida Akiwumi"}]
dependencies = [
    "mcp>=1.0.0",
    "psutil>=5.9.0",
    "streamlit>=1.30.0",
    "requests>=2.31.0"
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"